--- a/PowerPlanChanger/PowerPlanChanger.csproj
+++ b/PowerPlanChanger/PowerPlanChanger.csproj
@@ -97,6 +97,9 @@
   <ItemGroup>
     <None Include="Resources\LogoMed_Alpha.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\EnergySaver.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
