--- a/PowerPlanChanger/PowerPlanChanger.csproj
+++ b/PowerPlanChanger/PowerPlanChanger.csproj
@@ -94,6 +94,8 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="Resources\performancePlan.bin" />
+    <None Include="Resources\saverPlan.bin" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\EnergySaver.png" />
